--- a/Banka/MainWindow.xaml
+++ b/Banka/MainWindow.xaml
@@ -5,20 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Banka"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="700">
+        Title="MainWindow" Height="450" Width="800">
     <Grid Background="#FF1BFF04">
         <Button x:Name="bPridat" Content="Přidat" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="51,86,0,0" Click="bPridat_Click" FontWeight="Bold"/>
         <TextBox x:Name="tbPridat" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Margin="51,38,0,0" FontWeight="Bold"/>
         <ListBox x:Name="lbUcty" HorizontalAlignment="Left" Height="211" VerticalAlignment="Top" Width="157" Margin="252,38,0,0" SelectionChanged="LbUcty_SelectionChanged" FontWeight="Bold"></ListBox>
 
-        <Label x:Name="lZustatek" Content="Zůstatek: " HorizontalAlignment="Left" VerticalAlignment="Top" Margin="423,88,0,0" FontWeight="Bold"/>
-        <ComboBox x:Name="cbCisla" HorizontalAlignment="Left" VerticalAlignment="Top" Width="57" Margin="51,130,0,0" IsEditable="True" SelectedIndex="0" FontWeight="Bold"/>
+        <Label x:Name="lZustatek" Content="Zůstatek: " HorizontalAlignment="Left" VerticalAlignment="Top" Margin="423,119,0,0" FontWeight="Bold"/>
+        <ComboBox x:Name="cbDny" HorizontalAlignment="Left" VerticalAlignment="Top" Width="57" Margin="51,130,0,0" IsEditable="True" SelectedIndex="0" FontWeight="Bold"/>
 
-        <Button x:Name="bCas" Content="Posunout čas" HorizontalAlignment="Left" Margin="120,132,0,0" VerticalAlignment="Top" Width="82" Click="bCas_Click" FontWeight="Bold"/>
-        <Label x:Name="lNazev" Content="Název účtu: " HorizontalAlignment="Left" VerticalAlignment="Top" Margin="423,55,0,0" FontWeight="Bold"/>
+        <Button x:Name="bCas" Content="Přeskočit dny" HorizontalAlignment="Left" Margin="120,132,0,0" VerticalAlignment="Top" Width="82" Click="bCas_Click" FontWeight="Bold"/>
+        <Label x:Name="lNazev" Content="Název účtu: " HorizontalAlignment="Left" VerticalAlignment="Top" Margin="423,88,0,0" FontWeight="Bold"/>
         <Button x:Name="bVybrat" Content="Vybrat" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="144,86,0,0" Click="bVybrat_Click" FontWeight="Bold"/>
-        <Label x:Name="lDatum" Content="Aktuální Datum: " HorizontalAlignment="Left" Margin="423,119,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lDatum" Content="Aktuální Datum: " HorizontalAlignment="Left" Margin="423,150,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <Button Content="Nemáte účet? Zaregistrujte se zde" HorizontalAlignment="Left" Margin="448,190,0,0" VerticalAlignment="Top" Width="196" Height="59" Click="Button_Click"/>
+        <Label x:Name="lTyp" FontSize="16" Content="Typ účtu: " HorizontalAlignment="Left" VerticalAlignment="Top" Margin="424,57,0,0" FontWeight="Bold"/>
+        <ComboBox x:Name="cbMesic" HorizontalAlignment="Left" VerticalAlignment="Top" Width="57" Margin="51,159,0,0" IsEditable="True" SelectedIndex="0" FontWeight="Bold"/>
+        <Button x:Name="bMesic" Content="Přeskočit měsíce" HorizontalAlignment="Left" Margin="120,161,0,0" VerticalAlignment="Top" Width="99" Click="bMesic_Click" FontWeight="Bold"/>
 
     </Grid>
 </Window>
