--- a/Banka/RegWin.xaml
+++ b/Banka/RegWin.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Banka"
         mc:Ignorable="d"
-        Title="Výběr" Height="263.328" Width="318.138" Icon="B-icon.png">
+        Title="Registrace" Height="263.328" Width="318.138" Icon="B-icon.png"
+        ResizeMode="NoResize">
     <Grid Background="#FF13D3DC">
         <Grid.ColumnDefinitions>
 
@@ -21,14 +22,9 @@
 
         </Grid.RowDefinitions>
         <TextBox BorderThickness="2" BorderBrush="Gray" x:Name="tbJmeno"  Height="25" Width="120" Grid.Row="1" Text="Test" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="26,0,0,5" FontSize="16" Foreground="#FF13D3DC" />
-        <Button BorderThickness="2" BorderBrush="Gray" Content="Založit účet" Grid.Row="1" Grid.Column="1" Width="75" Height="30" Click="Button_Click" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,26,0" Foreground="#FF13D3DC" FontFamily="Tahoma" FontWeight="Bold"/>
-        <ComboBox BorderThickness="2" BorderBrush="Gray" x:Name="cbTyp" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="120"  SelectedIndex="1" IsSynchronizedWithCurrentItem="True" Margin="26,0,0,5" FontSize="16" Foreground="#FF13D3DC" >
-            <ComboBox.Background>
-                <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                    <GradientStop Color="#FFF0F0F0" Offset="0"/>
-                    <GradientStop Color="White" Offset="1"/>
-                </LinearGradientBrush>
-            </ComboBox.Background>
+        <Button BorderThickness="2" BorderBrush="Gray" Content="Založit účet" Grid.Row="1" Grid.Column="1" Width="75" Height="30" Click="Button_Click" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,26,0" Foreground="#FF13D3DC" FontFamily="Tahoma" FontWeight="Bold" Background="White"/>
+        <ComboBox  BorderThickness="2" BorderBrush="Gray" IsEditable="True" x:Name="cbTyp" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="120"  SelectedIndex="1" IsSynchronizedWithCurrentItem="True" Margin="25,0,0,5" FontSize="16" Foreground="#FF13D3DC" >
+
         </ComboBox>
         <TextBox BorderThickness="2" BorderBrush="Gray" Text="100 " x:Name="tbVklad" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="25" TextWrapping="Wrap" Width="120" FontSize="16" Margin="25,0,0,5" Foreground="#FF13D3DC"/>
         <Label Content="Vklad :" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="2" Margin="25,5,0,0" FontSize="14" Foreground="White" FontWeight="Bold" FontFamily="Tahoma"/>
