--- a/Banka/MainWindow.xaml
+++ b/Banka/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Banka"
         mc:Ignorable="d"
-        Title="Banka" Height="340.047" Width="1000" Icon="B-icon.png" AutomationProperties.Name="Hlavní" FontSize="16" FontFamily="Tahoma" FontWeight="Bold" MinWidth="850" MinHeight="340.047">
+        Title="Banka" Height="350" Width="1000" Icon="B-icon.png" AutomationProperties.Name="Hlavní" FontSize="16" FontFamily="Tahoma" FontWeight="Bold" MinWidth="850" MinHeight="340.047" MaxWidth="1500" MaxHeight="500">
     <Grid Background="#FF13D3DC">
         <Grid.ColumnDefinitions>
 
@@ -27,20 +27,21 @@
             <RowDefinition/>
 
         </Grid.RowDefinitions>
-        <Button Background="White" BorderThickness="2" BorderBrush="Gray" x:Name="bPridat" Content="Přidat"  Width="75" Click="bPridat_Click" FontWeight="Bold" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0
-                " Foreground="#FF13D3DC"/>
+        <Button Background="White" BorderThickness="2" BorderBrush="Gray" x:Name="bPridat" Content="Vložit"  Width="75" Click="bPridat_Click" FontWeight="Bold" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Margin="-100,0,0,0" Foreground="#FF13D3DC"/>
         <TextBox BorderThickness="2" BorderBrush="Gray" x:Name="tbPridat"  Height="25" TextWrapping="Wrap" Text="" Width="168" FontWeight="Bold" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <ListBox BorderThickness="2" BorderBrush="Gray" x:Name="lbUcty"  Height="235"  Width="157" SelectionChanged="LbUcty_SelectionChanged" FontWeight="Bold" Grid.Column="1" Grid.Row="1" Grid.RowSpan="7" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF13D3DC"></ListBox>
         <Label x:Name="lZustatek" Content="Zůstatek: "   FontWeight="Bold" Grid.Column="2" Grid.Row="3" Background="#FF13D3DC" Foreground="White"/>
         <ComboBox BorderThickness="2" BorderBrush="Gray" x:Name="cbDny" Width="75" IsEditable="True" SelectedIndex="0" FontWeight="Bold" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" Foreground="#FF13D3DC"/>
         <Button BorderBrush="Gray" BorderThickness="2" Background="White" x:Name="bCas" Content="Přeskočit dny" Width="120" Click="bCas_Click" FontWeight="Bold" Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="#FF13D3DC" Margin="0,0,10,0"/>
         <Label x:Name="lNazev" Content="Název účtu: " FontWeight="Bold" Grid.Column="2" Grid.Row="2" Foreground="White"/>
-        <Button Grid.Column="0" Grid.Row="2" Background="White" BorderThickness="2" BorderBrush="Gray" x:Name="bVybrat" Content="Vybrat" HorizontalAlignment="Right"  Width="75"  Click="bVybrat_Click" FontWeight="Bold" Margin="0,0,10,0" VerticalAlignment="Center" Foreground="#FF13D3DC" />
+        <Button Grid.Column="0" Grid.Row="2" Background="White" BorderThickness="2" BorderBrush="Gray" x:Name="bVybrat" Content="Vybrat"   Width="75"  Click="bVybrat_Click" FontWeight="Bold" Margin="0,0,-100,0" VerticalAlignment="Center" Foreground="#FF13D3DC" />
         <Label x:Name="lDatum" Content="Aktuální Datum: " FontWeight="Bold" Grid.Column="2" Grid.Row="4" Grid.RowSpan="2" Foreground="White"/>
         <Button BorderThickness="2" BorderBrush="Gray" Content="Registrace" Click="Button_Click" Grid.Column="0" Grid.Row="6" Grid.RowSpan="2" Margin="10,0,0,10" Background="White" Foreground="#FF13D3DC"/>
         <Label x:Name="lTyp" FontSize="16" Content="Typ účtu: " FontWeight="Bold" Grid.ColumnSpan="2" Foreground="White" Grid.Column="2" Grid.Row="1"/>
         <ComboBox BorderThickness="2" BorderBrush="Gray" x:Name="cbMesic" HorizontalAlignment="Left" VerticalAlignment="Center" Width="75"  IsEditable="True" SelectedIndex="0" FontWeight="Bold" Grid.Column="0" Grid.Row="4" Margin="10,0,0,0" Foreground="#FF13D3DC"></ComboBox>
         <Button BorderThickness="1" BorderBrush="Gray" x:Name="bMesic" Content="Přeskočit měsíce" HorizontalAlignment="Right" VerticalAlignment="Center" Width="150" Click="bMesic_Click" FontWeight="Bold" Grid.Column="0" Grid.Row="4" Background="White" Foreground="#FF13D3DC" Margin="0,0,10,0"/>
+        <ScrollViewer x:Name="docBar" BorderThickness="2" HorizontalAlignment="Left" Height="111" Grid.Column="2" Grid.Row="5" Grid.RowSpan="4"  VerticalAlignment="Top" Width="300"  Background="Gainsboro" BorderBrush="#FF464646" FontSize="12" Margin="0,10,0,0"/>
+
     </Grid>
 </Window>
 
