--- a/Banka/RegWin.xaml
+++ b/Banka/RegWin.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Banka"
         mc:Ignorable="d"
-        Title="Registrace" Height="263.328" Width="318.138" Icon="B-icon.png"
+        Title="Registrace" Height="300" Width="400" Icon="B-icon.png"
         ResizeMode="NoResize">
     <Grid Background="#FF13D3DC">
         <Grid.ColumnDefinitions>
@@ -21,15 +21,17 @@
             <RowDefinition/>
 
         </Grid.RowDefinitions>
-        <TextBox BorderThickness="2" BorderBrush="Gray" x:Name="tbJmeno"  Height="25" Width="120" Grid.Row="1" Text="Test" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="26,0,0,5" FontSize="16" Foreground="#FF13D3DC" />
+        <TextBox BorderThickness="2" BorderBrush="Gray" x:Name="tbJmeno"  Height="25" Width="120" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="26,0,0,5" FontSize="16" Foreground="#FF13D3DC" />
         <Button BorderThickness="2" BorderBrush="Gray" Content="Založit účet" Grid.Row="1" Grid.Column="1" Width="75" Height="30" Click="Button_Click" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,26,0" Foreground="#FF13D3DC" FontFamily="Tahoma" FontWeight="Bold" Background="White"/>
-        <ComboBox  BorderThickness="2" BorderBrush="Gray" IsEditable="True" x:Name="cbTyp" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="120"  SelectedIndex="1" IsSynchronizedWithCurrentItem="True" Margin="25,0,0,5" FontSize="16" Foreground="#FF13D3DC" >
+        <ComboBox  BorderThickness="2" BorderBrush="Gray" IsEditable="True" x:Name="cbTyp" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="120"  SelectedIndex="1" IsSynchronizedWithCurrentItem="True" Margin="25,0,0,5" FontSize="16" Foreground="#FF13D3DC" SelectionChanged="CbTyp_SelectionChanged" >
 
         </ComboBox>
         <TextBox BorderThickness="2" BorderBrush="Gray" Text="100 " x:Name="tbVklad" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="25" TextWrapping="Wrap" Width="120" FontSize="16" Margin="25,0,0,5" Foreground="#FF13D3DC"/>
         <Label Content="Vklad :" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="2" Margin="25,5,0,0" FontSize="14" Foreground="White" FontWeight="Bold" FontFamily="Tahoma"/>
         <Label Content="Jmeno :" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" Margin="25,5,0,0" FontSize="14" Foreground="White" FontWeight="Bold" FontFamily="Tahoma"/>
         <Label Content="Typ účtu :" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="26,0,0,0" RenderTransformOrigin="1.234,0.767" FontSize="14" BorderBrush="#FFB21616" Foreground="White" FontWeight="Bold" FontFamily="Tahoma"/>
+        <TextBox BorderThickness="2" BorderBrush="Gray" x:Name="tbDobaSplatky"  Height="25" Width="44" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="53,0,0,9" FontSize="16" Foreground="White" Grid.Column="1" Visibility="Visible" Background="#FF132EDC" />
+        <Label x:Name="label1" Content="Doba splátky(v měsících) " Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,26,0,0" RenderTransformOrigin="1.234,0.767" FontSize="12" BorderBrush="#FFB21616" Foreground="White" FontWeight="Bold" FontFamily="Tahoma" Visibility="Visible" Background="#FF1038EC"/>
 
     </Grid>
 </Window>
